[gd_scene load_steps=4 format=3 uid="uid://bq8r7u3k1v4h2"]

[ext_resource type="Script" uid="uid://d3h1g9k5m2n8p" path="res://Scenes/Play/FishCatchPopup.gd" id="1_popup_script"]
[ext_resource type="FontFile" uid="uid://65rfcb3imfa2" path="res://Assets/Font/vcr_osd_mono/VCR_OSD_MONO_1.001.ttf" id="2_pixel_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_popup_bg"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.1, 0.1, 0.1, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.6, 0.2, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="FishCatchPopup" type="Control"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_popup_script")

[node name="Background" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
theme_override_styles/panel = SubResource("StyleBoxFlat_popup_bg")

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="CongratulationsLabel" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_fonts/font = ExtResource("2_pixel_font")
theme_override_font_sizes/font_size = 24
text = "CONGRATULATIONS!"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Background/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="FishImageContainer" type="CenterContainer" parent="Background/VBoxContainer"]
layout_mode = 2

[node name="FishImage" type="TextureRect" parent="Background/VBoxContainer/FishImageContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 120)
stretch_mode = 4

[node name="Spacer2" type="Control" parent="Background/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="FishNameLabel" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_pixel_font")
theme_override_font_sizes/font_size = 20
text = "Fish Name"
horizontal_alignment = 1

[node name="RarityLabel" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_pixel_font")
theme_override_font_sizes/font_size = 18
text = "Rarity"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="Background/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 15)

[node name="InstructionLabel" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_pixel_font")
theme_override_font_sizes/font_size = 14
text = "Press SPACE to continue"
horizontal_alignment = 1
